--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -17,6 +17,7 @@ misp_fcgi_enable: false
 misp_lief_enable: true
 misp_lief_rootdir: /var/lief
 misp_config_php_template: config.php.j2
+misp_git_update_force: false
 
 misp_pip_cybox_version: '2.1.0.20'
 misp_pip_stix_version: '1.2.0.7'
