--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -581,7 +581,7 @@
 
 # snuffleupagus sp.readonly_exec.enable() = php file must be non-writeable (issue with auto-update?)
 - name: Ensure that webroot files are not executable and not writeable
-  command: "find {{ misp_rootdir }}/app/ -type f -iname '{{ item }}' ! -name config.php -exec chmod 0444 {} \\;"  # noqa 301
+  command: "find {{ misp_rootdir }}/app/ -type f -iname '{{ item }}' ! -name config.php ! -name include_paths.php -exec chmod 0444 {} \\;"  # noqa 301
   with_items:
     - '*.php'
     - '*.ctp'
