--- a/tasks/misp-add-users.yml
+++ b/tasks/misp-add-users.yml
@@ -34,7 +34,7 @@
     mode: '0640'
     group: "{{ www_user }}"
   with_items:
-    - { re: "^misp_url = .*", l: "misp_url = \"{{ misp_base_url }}\"" }
+    - { re: "^misp_url = .*", l: "misp_url = \"{{ misp_pymisp_base_url | default(misp_base_url) }}\"" }
     - { re: "^misp_key = .*", l: "misp_key = \"{{ userkey }}\"" }
     - { re: '^misp_verifycert = .*', l: "misp_verifycert = {{ misp_pymisp_verifycert }}" }
   no_log: "{{ misp_no_log }}"
