--- a/tasks/testing.yml
+++ b/tasks/testing.yml
@@ -119,7 +119,7 @@
     owner: "{{ misp_testing_user }}"
     create: yes
   with_items:
-    - "url = \"{{ misp_base_url }}\""
+    - "url = \"{{ misp_pymisp_base_url | default(misp_base_url) }}\""
     - "key = \"{{ userkey }}\""
   no_log: "{{ misp_no_log }}"
 - name: symlink key file in examples/events
