--- a/test/integration/default/default.yml
+++ b/test/integration/default/default.yml
@@ -17,6 +17,8 @@
     - misp_no_log: false
     - hardenwebserver_enable_defaultssl: false
     - harden_php_disable_functions: 'pcntl_alarm,pcntl_fork,pcntl_waitpid,pcntl_wait,pcntl_wifexited,pcntl_wifstopped,pcntl_wifsignaled,pcntl_wexitstatus,pcntl_wtermsig,pcntl_wstopsig,pcntl_signal,pcntl_signal_dispatch,pcntl_get_last_error,pcntl_strerror,pcntl_sigprocmask,pcntl_sigwaitinfo,pcntl_sigtimedwait,pcntl_exec,pcntl_getpriority,pcntl_setpriority,chown,diskfreespace,disk_free_space,disk_total_space,dl,exec,escapeshellarg,escapeshellcmd,fileinode,highlight_file,max_execution_time,passthru,pclose,phpinfo,popen,proc_close,proc_open,proc_get_status,proc_nice,proc_terminate,shell_exec,show_source,system,__construct, __destruct, __call,__wakeup'
+    - misp_php_snuffleupagus_enable: true
+    - harden_php7_snuffleupagus: true
     - harden_php7_snuffleupagus_rules_template: '/tmp/kitchen/juju4.misp/templates/misp-snuffleupagus-rules.ini.j2'
     - harden_apache_php_variants: ['apache2']
     - faup_virtualenv_path: "{{ misp_virtualenv }}"
