rhel/centos: fix missing /usr/local/bin PATH to test composer

--- a/tasks/testing.yml
+++ b/tasks/testing.yml
@@ -29,6 +29,8 @@
   changed_when: false
   become: yes
   become_user: "{{ www_user }}"
+  environment:
+    PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 - name: pip dependencies for testing
   pip:
     name: ['coveralls', 'codecov', 'nose', 'requests-mock', 'poetry']
