--- a/tasks/misp-modules.yml
+++ b/tasks/misp-modules.yml
@@ -27,6 +27,13 @@
     backup: yes
   when: ansible_distribution == 'Ubuntu' and ansible_distribution_version == '16.04'
 
+- name: Ubuntu 18.04 | Disable Trustar - Python 3.8+ required
+  lineinfile:
+    dest: "{{ mispmodules_rootdir }}/misp-modules/REQUIREMENTS"
+    regexp: '^trustar==.*'
+    line: 'trustar==0.3.33'
+  when: ansible_distribution == 'Ubuntu' and ansible_distribution_version == '18.04'
+
 - name: Enforce latest PyMISP
   replace:
     dest: "{{ mispmodules_rootdir }}/misp-modules/REQUIREMENTS"
