--- a/tasks/misp-modules.yml
+++ b/tasks/misp-modules.yml
@@ -27,11 +27,11 @@
     backup: yes
   when: ansible_distribution == 'Ubuntu' and ansible_distribution_version == '16.04'
 
-- name: Ubuntu 18.04, RHEL8 | Downgrade Trustar - Python 3.8+ required
+- name: Ubuntu 18.04, RHEL8 | Downgrade Trustar
   lineinfile:
     dest: "{{ mispmodules_rootdir }}/misp-modules/REQUIREMENTS"
     regexp: '^trustar==.*'
-    line: 'trustar==0.3.33'
+    line: 'trustar==0.3.32'
   when: >
     (ansible_distribution == 'Ubuntu' and ansible_distribution_version == '18.04') or
     (ansible_os_family == 'RedHat' and ansible_distribution_major_version|int == 8)
