misp-modules: add pillow, censys, pyfaup

--- a/tasks/misp-modules.yml
+++ b/tasks/misp-modules.yml
@@ -53,6 +53,18 @@
     state: directory
     mode: '0755'
 
+- name: debian | install pillow dependency for MISP modules (pip3)
+  pip:
+    name: pillow
+    virtualenv: "{{ misp_virtualenv }}"
+    virtualenv_python: "{{ python3_bin }}"
+    chdir: "{{ mispmodules_rootdir }}/misp-modules"
+  when: ansible_os_family == 'Debian'
+  register: pkg_result
+  until: pkg_result is success
+  become: yes
+  become_user: "{{ www_user }}"
+
 - name: debian | install dependencies for MISP modules (pip3)
   pip:
     requirements: "{{ mispmodules_rootdir }}/misp-modules/REQUIREMENTS"
@@ -118,6 +130,20 @@
     virtualenv_python: "{{ python3_bin }}"
   environment:
     PATH: "{{ misp_virtualenv }}/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+  register: pkg_result
+  until: pkg_result is success
+  become: yes
+  become_user: "{{ www_user }}"
+
+- name: debian | install dependencies for MISP modules (pip3) - post-install
+  pip:
+    name:
+      - censys
+      - pyfaup
+    virtualenv: "{{ misp_virtualenv }}"
+    virtualenv_python: "{{ python3_bin }}"
+    chdir: "{{ mispmodules_rootdir }}/misp-modules"
+  when: ansible_os_family == 'Debian'
   register: pkg_result
   until: pkg_result is success
   become: yes
