--- a/vars/RedHat-7.yml
+++ b/vars/RedHat-7.yml
@@ -88,6 +88,7 @@ nginx_sock: /var/run/php-fpm/php-fpm.sock
 php_confdir: /etc/php.d
 php_confext: ini
 php_ini: /etc/php.ini
+php_remi_version: 72
 fpm_user: nobody
 
 gnupg_privdir: "{{ misp_rootdir }}/.gnupg"
