--- a/tasks/redhat.yml
+++ b/tasks/redhat.yml
@@ -7,7 +7,7 @@
 
 ## for php-redis
 - include: redhat-remi.yml
-  when: ansible_os_family == "RedHat" and ansible_distribution_major_version|int < 8
+  when: ansible_os_family == "RedHat"
 
 - name: RedHat8+ | Enable PowerTools repo
   ini_file:
