--- a/tasks/redhat-remi.yml
+++ b/tasks/redhat-remi.yml
@@ -49,7 +49,10 @@
   # yum_repository:
   #   name: remi-php56
   #   enable: yes
-  when: not ('enabled=1' in remistate.stdout) and ansible_distribution_major_version|int < 8
+  when:
+    - ansible_distribution_major_version|int < 8
+    - remistate.stdout is defined
+    - not ('enabled=1' in remistate.stdout)
 
 # https://github.com/ansible/ansible-modules-extras/issues/2384
 - name: RHEL8 | enable remi repository for php
