--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -21,7 +21,7 @@ jobs:
             version: 8
             version2: 8
             suite: default
-            experimental: true
+            experimental: false
           - distribution: ubuntu
             version: '20.04'
             version2: 2004
@@ -38,7 +38,7 @@ jobs:
             suite: default-nosnuffle
             experimental: false
     env:
-      ANSIBLE_CALLBACK_WHITELIST: profile_tasks
+      ANSIBLE_CALLBACKS_ENABLED: profile_tasks
       ANSIBLE_EXTRA_VARS: "-e misp_mysql_user=root -e misp_mysql_pass=root"
 
     steps:
