ansible s/include:/import_tasks:/ (2)

--- a/tasks/misp-add-users.yml
+++ b/tasks/misp-add-users.yml
@@ -73,7 +73,7 @@
   changed_when: false
 
 - block:
-    - import_tasks: misp-add-user.yml
+    - include_tasks: misp-add-user.yml
       vars:
         user: "{{ item }}"
         list: "{{ listusers }}"
