centos8: switch to stream for powertools (2)

--- a/tasks/redhat.yml
+++ b/tasks/redhat.yml
@@ -12,7 +12,7 @@
 - name: RedHat8+ | Enable PowerTools repo
   ini_file:
     dest: /etc/yum.repos.d/CentOS-Stream-PowerTools.repo
-    section: PowerTools
+    section: powertools
     option: "{{ item.o }}"
     value: "{{ item.v }}"
     mode: '0644'
